# tp2_os

./: AUTHOR.md  CMakeLists.txt  README.md  protocol.h  rapport.tex
client/: client_thread.c  client_thread.h  main.c
server/: main.c  server_thread.c  server_thread.h
